Fix user show page display on smaller screens

--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -20,7 +20,6 @@ body {
 .main-wrapper {
     display: flex;
     justify-content: center;
-    height: 100%;     // remove after presentation
     width: 100%;
     background-color: rgb(248, 248, 248);
     border-top: 1px solid rgb(238, 238, 238);
